# project_SE

./: pov.brd  pov.sch
Code/: CMakeCache.txt  CMakeLists.txt  Makefile  SPI_led.c  SPI_led.h  USART.c  a.out  capt_Hall.c  capt_Hall.h  main.c  main2.c  patterns.c  patterns.h  timer.c  timer.h
Code2/: SPI_led.c  SPI_led.h  USART.h  capt_Hall.c  capt_Hall.h  main.c  timer.h
